--- a/swap2/OKT/OKTswap.html
+++ b/swap2/OKT/OKTswap.html
@@ -11,11 +11,11 @@
     <script src="https://mis320.github.io/xiamicommunity/web3ex1.js"></script>
     <script src="https://mis320.github.io/xiamicommunity/ethers-v4.min.js"></script>
     <script src="https://mis320.github.io/xiamicommunity/erc20Abi.js"></script>
-    < <script src="https://mis320.github.io/transfer/swap2/buyadnsell.js"></script> 
-    
-   <script src="https://mis320.github.io/transfer/swap2/node.js"></script>
+    <!-- <script src="https://mis320.github.io/transfer/swap2/buyadnsellv2.js"></script> -->
+    <!--  <script src="../OKT/buyandsell.js"></script> -->
+    <!-- <script src="https://mis320.github.io/transfer/swap2/nodev2.js"></script> -->
     <!--  <script src="./newweb3.js"></script> -->
-    
+   <!--  <script src="../OKT/newweb3.js"></script> -->
     <style>
         textarea {
             resize: none
