--- a/txtjx/index.html
+++ b/txtjx/index.html
@@ -77,7 +77,7 @@
 
         let w1 = ''
         for (let index = 0; index < regtxt.length; index++) {
-            if (regtxt[index].length == 42 && parent(regtxt[index])>0) {
+            if (regtxt[index].length == 42 && parseInt(regtxt[index])>0 ) {
                 if (index != regtxt.length - 1) {
                     w1 = w1 + regtxt[index] + "\n"
                 } else {
