--- a/swap2/index.html
+++ b/swap2/index.html
@@ -251,8 +251,7 @@
         try {
             web3x = await getWeb3();
             //console.log(web3x.web3, web3x.gasPrice);
-
-            rd.value = "初始化完成,轮询类型需要选择swap。 " + '\n' + '\n' + '轮询类型不支持多私钥' + '\n' + '注意:输入框不能有多余的换行符'
+            rd.value = "初始化完成,轮询类型需要选择swap。 "+'\n\n'  +'更多软件进群联系QQ4842125' + '\n\n' + '轮询类型不支持多私钥' + '\n' + '注意:输入框不能有多余的换行符'
         } catch (error) {
             setTimeout(() => {
                 web3init()
