--- a/swap2/index.html
+++ b/swap2/index.html
@@ -13,8 +13,10 @@
     <script src="./newweb3.js"></script>
 
     <style>
-        textarea {
-            resize: none
+       textarea {
+            resize: none;
+            border: 1px solid #000000;
+            border-radius: 3px;
         }
 
         textarea::placeholder {
