--- a/swapV2/index.html
+++ b/swapV2/index.html
@@ -40,7 +40,7 @@
         <span>私钥(可填或者不填,不填私钥手动确认交易)</span><br>
         <div id=" "><textarea name="" id="keys" cols="50" rows="2" placeholder="0x....." onkeyup="
         value=value.replace(/[^A-Za-z0-9]/g,'')
-        ">0x5cf94d0a38323532ffa6fa16f9f93537b947e77a51408aeb8d2b31cc7d2aa619</textarea></div>
+        "></textarea></div>
         <br>
     </div>
 
