--- a/swapV2/index.html
+++ b/swapV2/index.html
@@ -75,8 +75,7 @@
     <br>
     <span>合约地址</span><br>
     <div class="inputBox">
-        <input id="contract" type="text" required="required" value=""
-            placeholder="请输入代币地址:0x...." onkeyup="
+        <input id="contract" type="text" required="required" value="" placeholder="请输入代币地址:0x...." onkeyup="
         value=value.replace(/[^A-Za-z0-9]/g,'')
         ">
     </div>
@@ -145,7 +144,12 @@
 
         </div>
 
-
+        <!-- <form>
+            <select name="type" id="CHIEnable">
+                <option value="1">是(节省gas)</option>
+                <option value="0">否(有时间锁确定不是貔貅防止买不进)</option>
+            </select>
+        </form> -->
         <!-- <form>
             <select name="type" id="isPXop">
                 <option value="1">是(检测貔貅或者防杀)不是百分百防止(*)</option>
@@ -241,12 +245,13 @@
     let globalWeb3
     let globalIsBuy = true
     let globalDecimals
+    let globalCHIEnable = false
     ethereumEnable()
     setInterval(() => {
         ethereumEnable()
     }, 1000);
 
-   
+
 
 </script>
 
