--- a/swapV2/index.html
+++ b/swapV2/index.html
@@ -76,7 +76,7 @@
     <br>
     <span>合约地址</span><br>
     <div class="inputBox">
-        <input id="contract" type="text" required="required" value="0xe6df05ce8c8301223373cf5b969afcb1498c5528" placeholder="请输入代币地址:0x...." onkeyup="
+        <input id="contract" type="text" required="required" value="" placeholder="请输入代币地址:0x...." onkeyup="
         value=value.replace(/[^A-Za-z0-9]/g,'')
         ">
     </div>
